<resources>
    <string name="app_name">Reservation</string>
    <string name="reset">Reset</string>
    <string name="reserve">Reserve</string>
    <string name="smoking">Smoking</string>
    <string name="time">Time:</string>
    <string name="_1_6_2021">1/6/2021</string>
    <string name="date">Date:</string>
    <string name="pax">Pax:</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="name">Name</string>

</resources>