<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/loginHeader"
            android:text="@string/app_name"
            android:layout_marginTop="@dimen/loginViewsMargin"
            android:textSize="36sp" />

    <com.google.android.material.textfield.TextInputLayout
            style="@style/parent"
            android:layout_marginTop="@dimen/loginViewsMargin">

        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                style="@style/modifiedEditText"
                android:id="@+id/inputName" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            style="@style/parent"
            android:layout_marginTop="@dimen/loginViewsMargin">

        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:hint="@string/mobile_number"
                style="@style/modifiedEditText"
                android:id="@+id/inputNumber"
                android:phoneNumber="true" />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/parent"
            android:layout_marginTop="-5dp">

        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="wrap_content"
                android:clickable="false"
                android:enabled="false"
                android:gravity="center"
                android:layout_gravity="center"
                android:layout_height="match_parent">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="65dp"
                    style="@style/loginHeader"
                    android:text="@string/pax"
                    android:textSize="30sp"
                    android:paddingRight="20dp"
                    android:layout_gravity="center_horizontal" />
        </com.google.android.material.textfield.TextInputLayout>

        <NumberPicker
                android:layout_width="wrap_content"
                android:layout_height="133dp"
                android:id="@+id/inputPax"
                android:layout_marginLeft="215dp"
                android:layout_marginStart="215dp" />

    </LinearLayout>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-20dp">

        <TextView
                android:text="@string/date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/loginHeader"
                android:paddingTop="5dp"
                android:id="@+id/textDate"
                android:paddingRight="20dp"
                android:textSize="30sp" />

        <TextView
                android:text="@string/_1_6_2021"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                style="@style/loginHeader"

                android:id="@+id/textDateOutput"
                android:paddingTop="5dp"
                android:textSize="24sp"
                android:gravity="end" />
    </LinearLayout>


    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/parent">

        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="wrap_content"
                android:clickable="false"
                android:enabled="false"
                android:gravity="center"
                android:layout_gravity="center"
                android:layout_height="match_parent">

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    style="@style/loginHeader"
                    android:text="@string/time"
                    android:textSize="30sp"
                    android:paddingRight="14dp"
                    android:layout_gravity="center_horizontal"
                    android:id="@+id/textTime" />
        </com.google.android.material.textfield.TextInputLayout>

        <TimePicker
                android:id="@+id/timePicker"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:timePickerMode="spinner"
                android:calendarViewShown="false" />

    </LinearLayout>
    <CheckBox
            android:text="@string/smoking"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/loginHeader"
            android:textSize="24sp"
            android:buttonTint="@color/colorPrimary"
            android:id="@+id/checkBoxSmoking"
            android:layout_weight="1"
            android:layout_marginTop="20dp" />

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/parent"
            android:layout_marginTop="@dimen/loginViewsMargin">

        <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/buttonReserve"
                android:text="@string/reserve"
                style="@style/loginButton"
                android:layout_marginLeft="4dp"
                android:layout_marginStart="4dp"
                android:layout_marginRight="10dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1" />

        <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/buttonReset"
                android:text="@string/reset"
                style="@style/loginButton"
                android:layout_marginRight="4dp"
                android:layout_marginEnd="4dp"
                android:layout_weight="1"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp" />
    </LinearLayout>

</LinearLayout>